--- a/Task Tracker/Project_Dashboard.xaml
+++ b/Task Tracker/Project_Dashboard.xaml
@@ -43,7 +43,7 @@
             <StackPanel Margin="10" Height="80">
                 <TextBlock Text="Resources"  FontSize="18" Background="#FF0F4E7A" Foreground="White" Height="25"/>
                 <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
-                    <ListView x:Name="resources" Width="150" Height="55" BorderBrush="#FF0F4E7A"  />
+                    <ListView x:Name="resources" Width="150" Height="55" BorderBrush="#FF0F4E7A" MouseDoubleClick="resources_MouseDoubleClick"  />
                 </ScrollViewer>
             </StackPanel>
         </StackPanel>
@@ -81,9 +81,9 @@
         </DataGrid>
 
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="2">
-            <Button Content="Create New Task" Margin="10" Width="150" Background="#FF0F4E7A" Foreground="White" HorizontalAlignment="Left" Click="Create_task" />
-            <Button Content="Edit" Margin="10" Width="150" Background="#FF0F4E7A" Foreground="White" HorizontalAlignment="Center" Click="Edit_Task" />
-            <Button Content="Delete" Margin="10" Width="150" Background="#FF0F4E7A" Foreground="White" HorizontalAlignment="Left" Click="Delete_Task" />
+            <Button x:Name="Add" Content="Create New Task" Margin="10" Width="150" Background="#FF0F4E7A" Foreground="White" HorizontalAlignment="Left" Click="Create_task" />
+            <Button x:Name="Edit" Content="Edit" Margin="10" Width="150" Background="#FF0F4E7A" Foreground="White" HorizontalAlignment="Center" Click="Edit_Task" />
+            <Button x:Name="Delete" Content="Delete" Margin="10" Width="150" Background="#FF0F4E7A" Foreground="White" HorizontalAlignment="Left" Click="Delete_Task" />
             <Button Content="Add Progress" Margin="10" Width="150" Background="#FF0F4E7A" Foreground="White" HorizontalAlignment="Left" Click="Add_Progress" />
         </StackPanel>
     </Grid>
